create css breakpoints

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,12 +26,12 @@
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: "Poppins", sans-serif;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
 }
 
 @media screen and (min-width: 968px) {
@@ -39,8 +39,8 @@
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
@@ -56,10 +56,12 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  transition: .3s; /* For animation dark mode */
+  transition: 0.3s; /* For animation dark mode */
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: var(--title-color);
   font-weight: 600;
 }
@@ -78,16 +80,55 @@ img {
 }
 
 /*=============== THEME ===============*/
+.change-theme {
+  position: absolute;
+  top: 1.5rem;
+  right: 0;
+  font-size: 1.25rem;
+  color: var(--title-color);
+  cursor: pointer;
+  transition: 0.3;
+}
 
+.change-theme:hover {
+  color: var(--first-color);
+}
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme {
+  --title-color: hsl(var(--hue), 12%, 95%);
+  --text-color: hsl(var(--hue), 12%, 75%);
+  --body-color: hsl(var(--hue), 40%, 8%);
+  --container-color: hsl(var(--hue), 24%, 12%);
+}
 
 /*========== 
     Color changes in some parts of 
     the website, in light theme
 ==========*/
+.dark-theme .button__gray {
+  background-color: var(--container-color);
+}
 
+.dark-theme .button__gray:hover {
+  background-color: hsl(var(--hue), 24%, 16%);
+}
+
+.dark-theme .filters__content {
+  background-color: var(--container-color);
+}
+
+.dark-theme::webkit-scrollbar {
+  background-color: hsl(var(--hue), 8%, 16%);
+}
+
+.dark-theme::webkit-scrollbar-thumb {
+  background-color: hsl(var(--hue), 8%, 24%);
+}
+
+.dark-theme::webkit-scrollbar-thumb:hover {
+  background-color: hsl(var(--hue), 8%, 32%);
+}
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -119,9 +160,11 @@ img {
 .profile__perfil {
   width: 100px;
   height: 100px;
-  background: linear-gradient(180deg,
-              hsla(var(--hue), var(--sat), var(--lig), 1) 0%,
-              hsla(var(--hue), var(--sat), var(--lig), .2) 100%); 
+  background: linear-gradient(
+    180deg,
+    hsla(var(--hue), var(--sat), var(--lig), 1) 0%,
+    hsla(var(--hue), var(--sat), var(--lig), 0.2) 100%
+  );
   border-radius: 50%;
   overflow: hidden;
   display: flex;
@@ -141,7 +184,7 @@ img {
   border-radius: 50%;
   display: grid;
   place-items: center;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 .profile__name {
@@ -155,8 +198,7 @@ img {
   margin-bottom: 1rem;
 }
 
-
-.profile__social { 
+.profile__social {
   text-align: center;
   justify-content: center;
   column-gap: 75rem;
@@ -165,14 +207,14 @@ img {
 .profile__social-link {
   font-size: 1.25rem;
   color: var(--title-color);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .profile__social-link:hover {
   color: var(--first-color);
 }
 
-.profile__info {  
+.profile__info {
   justify-content: center;
   column-gap: 2.5rem;
 }
@@ -180,7 +222,7 @@ img {
 .profile__info-group {
   text-align: center;
   font-size: var(--normal-font-size);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .profile__info-description {
@@ -195,8 +237,6 @@ img {
   column-gap: 1rem;
 }
 
-
-
 /*=============== BUTTONS ===============*/
 
 .button {
@@ -206,27 +246,28 @@ img {
   background-color: var(--first-color);
   color: #fff;
   padding: 1.15rem 1.5rem;
-  border-radius: .5rem;
-  transition: .3s;
-  box-shadow: 0 8px 24px hsla(var(--hue), var(--sat), var(--lig), .25);
+  border-radius: 0.5rem;
+  transition: 0.3s;
+  box-shadow: 0 8px 24px hsla(var(--hue), var(--sat), var(--lig), 0.25);
 }
 
-.button i{
+.button i {
   font-size: 1.25rem;
 }
 
-
-
+.button:hover {
+  background-color: var(--first-color-alt);
+}
 
 /*=============== FILTERS TABS ===============*/
 .filters__content {
   margin: 2rem 0 2.5rem;
   background-color: var(--text-color-lighten);
-  padding: .375rem;
-  border-radius: .75rem;
+  padding: 0.375rem;
+  border-radius: 0.75rem;
   display: flex;
   justify-content: space-between;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
 }
 
 .filters__button {
@@ -238,10 +279,10 @@ img {
   font-size: var(--small-font-size);
   font-family: var(--body-font);
   font-weight: 500;
-  border-radius: .75rem;
+  border-radius: 0.75rem;
   cursor: pointer;
   background-color: transparent;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .filters__button:hover {
@@ -266,13 +307,15 @@ img {
   height: 100%;
   bottom: -100%;
   left: 0;
-  background: linear-gradient(180deg,
-              hsla(var(--hue), 24%, 40%, .3) 0%,
-              hsla(var(--hue), 24%, 4%, 1) 95%);
+  background: linear-gradient(
+    180deg,
+    hsla(var(--hue), 24%, 40%, 0.3) 0%,
+    hsla(var(--hue), 24%, 4%, 1) 95%
+  );
   display: grid;
   align-items: flex-end;
   padding: 1.5rem 1.25rem;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .projects__subtitle,
@@ -286,11 +329,11 @@ img {
 
 .projects__title {
   font-size: var(--h3-font-size);
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 .projects__button {
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 .projects__card:hover .projects__modal {
@@ -322,10 +365,10 @@ img {
 
 .skills__data {
   display: flex;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
 }
 
-.skills__data i{
+.skills__data i {
   font-size: 1rem;
   color: var(--first-color);
 }
@@ -344,7 +387,7 @@ img {
 .filters [data-content] {
   display: none;
 }
-.filters__active[data-content]{
+.filters__active[data-content] {
   display: grid;
 }
 
@@ -353,18 +396,122 @@ img {
   background-color: var(--body-color);
 }
 
-
 /*=============== FOOTER ===============*/
 
+.footer__copy {
+  display: block;
+  margin: 2.5rem 0 2rem;
+  text-align: center;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+}
 
 /*=============== SCROLL BAR ===============*/
-
+::webkit-scrollbar {
+  width: 0.6rem;
+  border-radius: 0.5rem;
+  background-color: hsl(var(--hue), 8%, 66%);
+}
+::webkit-scrollbar-thumb {
+  width: 0.5rem;
+  background-color: hsl(var(--hue), 8%, 54%);
+}
+::webkit-scrollbar-thumb:hover {
+  background-color: hsl(var(--hue), 8%, 44%);
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-
+@media screen and (max-width: 320px) {
+  .container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  .profile__info {
+    column-gap: 1.5rem;
+  }
+  .profile__buttons {
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+  .skills__box {
+    column-gap: 1rem;
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width: 576px) {
+  .projects__content {
+    grid-template-columns: 332px;
+    justify-content: center;
+  }
 
+  .filters__content {
+    width: 332px;
+    margin: 3rem auto;
+  }
+}
+
+@media screen and (min-width: 776px) {
+  /* .project__content,
+  .skills__content {
+    grid-template-columns: repeat(2, 332px);
+  } */
+  .skills__content {
+    justify-content: center;
+    column-gap: 3rem;
+  }
+}
 
 /* For large devices */
+@media screen and (min-width: 992px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .change-theme {
+    top: 2.5rem;
+    right: 2.5rem;
+  }
+  .profile {
+    padding-top: 4rem;
+  }
+  .profile__border {
+    width: 135px;
+    height: 135px;
+    margin-bottom: 1rem;
+  }
+  .profile__perfil {
+    width: 120px;
+    height: 120px;
+  }
+  .profile__perfil img {
+    width: 90px;
+  }
+  .profile__profession {
+    margin-bottom: 1.5rem;
+  }
+  .profile__info {
+    column-gap: 3rem;
+  }
+  .profile__info-description {
+    font-size: var(--small-font-size);
+  }
+  .profile__buttons {
+    column-gap: 2rem;
+  }
+  .projects__content {
+    gap: 2rem 3rem;
+    justify-content: center;
+  }
+  .projects__modal {
+    padding: 1.5rem;
+  }
+  .skills__title {
+    font-size: var(--normal-font-size);
+    margin-bottom: 2.5rem;
+  }
+  .footer__copy {
+    margin: 4.5rem 0 2.5rem;
+  }
+}
