--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,6 +130,8 @@ body.dark-theme {
   background-color: hsl(var(--hue), 8%, 32%);
 }
 
+
+
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 968px;
@@ -400,7 +402,7 @@ body.dark-theme {
 
 .footer__copy {
   display: block;
-  margin: 2.5rem 0 2rem;
+  margin: 2.5rem 0 -22.0rem;
   text-align: center;
   font-size: var(--smaller-font-size);
   color: var(--text-color-light);
@@ -454,7 +456,9 @@ body.dark-theme {
 
 @media screen and (min-width: 776px) {
   .projects__content {
-    grid-template-columns: repeat(2, 332px);
+    /* grid-template-columns: repeat(2, 332px); */
+    justify-content: center;  
+    /* *^^^ TURN OFF CENTER TURN ON GRID COLUMNS IF MORE THAN ONE PROJECT */
   }
   .skills__content {
     justify-content: center;
@@ -511,6 +515,6 @@ body.dark-theme {
     margin-bottom: 2.5rem;
   }
   .footer__copy {
-    margin: 4.5rem 0 2.5rem;
+    margin: 4.5rem 0 -2.5rem;
   }
 }
